[package]
name = "quack_on_ice"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
bevy = {version = "0.12.1", features = ["wav", "wayland"]}
bevy_tweening = "0.9"
wasm-bindgen = "0.2.89"
bevy-inspector-egui = "0.21.0"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[lints.clippy]
type_complexity = "allow"
too_many_arguments = "allow"

[target.wasm32-unknown-unknown]
runner = "wasm-server-runner"

[build-dependencies]
embed-resource = "2.4.0"

[workspace]
resolver = "2" # Important! wgpu/Bevy needs this!